--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -2,16 +2,13 @@ name: Allure Docker Service Workflow
 
 on:
   push:
-    branches:
-      - "*"
-
     tags:
       - v*
 
   pull_request:
 
 env:
-  DOCKER_IMAGE: frankescobar/allure-docker-service
+  DOCKER_IMAGE: ghcr.io/hardnorth/allure-docker-service
   ALLURE_RELEASE: 2.18.1
   QEMU_VERSION: v4.0.0
   DOCKER_CLI_EXPERIMENTAL: enabled
@@ -109,11 +106,11 @@ jobs:
 
       - name: DockerHub Login
         if: success() && startsWith(github.ref, 'refs/tags/v')
-        env:
-          DOCKER_HUB_USER: ${{ secrets.DOCKER_HUB_USER }}
-          DOCKER_HUB_PASS: ${{ secrets.DOCKER_HUB_PASS }}
-        run: |
-          echo "${DOCKER_HUB_PASS}" | docker login -u "${DOCKER_HUB_USER}" --password-stdin
+        uses: docker/login-action@v2
+        with:
+          registry: ghcr.io
+          username: ${{ github.actor }}
+          password: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Docker Publishing
         if: success() && startsWith(github.ref, 'refs/tags/v')
@@ -132,11 +129,11 @@ jobs:
     steps:
       - name: DockerHub Login
         if: success() && startsWith(github.ref, 'refs/tags/v')
-        env:
-          DOCKER_HUB_USER: ${{ secrets.DOCKER_HUB_USER }}
-          DOCKER_HUB_PASS: ${{ secrets.DOCKER_HUB_PASS }}
-        run: |
-          echo "${DOCKER_HUB_PASS}" | docker login -u "${DOCKER_HUB_USER}" --password-stdin
+        uses: docker/login-action@v2
+        with:
+          registry: ghcr.io
+          username: ${{ github.actor }}
+          password: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Docker Publishing Manifest
         if: success() && startsWith(github.ref, 'refs/tags/v')
